@startuml

title __COMMAND's Class Diagram__\n

  namespace tilegame {
    namespace command {
      abstract class tilegame.command.Command {
          + Command()
          {abstract} + executeCommand()
      }
    }
  }
  

  namespace tilegame {
    namespace command {
      class tilegame.command.easy_command {
          + easy_command()
          + executeCommand()
      }
    }
  }
  

  namespace tilegame {
    namespace command {
      class tilegame.command.exit_command {
          + executeCommand()
          + exit_command()
      }
    }
  }
  

  namespace tilegame {
    namespace command {
      class tilegame.command.hard_command {
          + executeCommand()
          + hard_command()
      }
    }
  }
  

  namespace tilegame {
    namespace command {
      class tilegame.command.sett_command {
          + executeCommand()
          + sett_command()
      }
    }
  }
  

  namespace tilegame {
    namespace command {
      class tilegame.command.start_command {
          + executeCommand()
          + start_command()
      }
    }
  }
  

  tilegame.command.Command o-- tilegame.Handler : handler
  tilegame.command.easy_command -up-|> tilegame.command.Command
  tilegame.command.exit_command -up-|> tilegame.command.Command
  tilegame.command.hard_command -up-|> tilegame.command.Command
  tilegame.command.sett_command -up-|> tilegame.command.Command
  tilegame.command.start_command -up-|> tilegame.command.Command


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
